fixed a error where the content on the front page was not aligning to center peoperly on firefox and MS Egde. fixed issue where clicking on the brand was reloading the site instead of properly navagating to the corrent page.

--- a/src/components/Home/homepage.css
+++ b/src/components/Home/homepage.css
@@ -1,8 +1,11 @@
+.content{
+    position: absolute;
+    top: 35%;
+    margin-bottom: 60px;
+}
 .left{ 
     font-size: 26px;
     color: rgba(216, 177, 49, 0.90);
-    margin-top: 32%;
-   
 }
 .left h1{
     font-size: 2.5em;
@@ -14,8 +17,8 @@
     border-radius: 25px;
     border: rgba(216, 177, 49, 0.90) solid 2px;
     box-shadow: 10px 20px #000 ;
-    margin-top: 61%;
-    margin-left: 25%;
+    position: relative;
+    left: 55%;
 }
 @media screen and (max-width: 772px){
     body{
@@ -24,14 +27,16 @@
     #root{
         width: 100%;
     }
+    .content{
+       position: absolute;
+       top: 70px;
+    }
     .left{ 
         margin-top: 10%;
-        margin-left: 10%;
-    }
+        margin-bottom:20px;
+        }
     .right{
-        margin-top: 10%;
-        margin-left: 10%;
-        width: 70%
+        left: 0%;
     }
     
 }
